--- a/index.html
+++ b/index.html
@@ -2,27 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>nah</title>
+    <title>Maze Server List</title>
     <style>
-        body { background: #121212; color: #e0e0e0; font-family: 'Segoe UI', sans-serif; display: flex; flex-direction: column; align-items: center; }
-        canvas { border: 3px solid #333; border-radius: 8px; box-shadow: 0 0 20px rgba(0,0,0,0.5); margin: 20px; cursor: crosshair; }
-        .controls { background: #1e1e1e; padding: 20px; border-radius: 10px; width: 600px; text-align: center; }
-        textarea { width: 100%; height: 60px; background: #2d2d2d; color: #00ffcc; border: 1px solid #444; border-radius: 5px; margin-top: 10px; font-family: monospace; resize: none; }
-        button { background: #007acc; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; font-weight: bold; margin-top: 10px; transition: 0.2s; }
-        button:hover { background: #005f99; }
-        .stats { margin-bottom: 10px; color: #888; }
+        body { background: #121212; color: #eee; font-family: sans-serif; display: flex; flex-direction: column; align-items: center; }
+        .container { display: flex; gap: 20px; margin-top: 20px; }
+        canvas { border: 2px solid #444; background: #000; }
+        .menu { width: 250px; background: #1e1e1e; padding: 15px; border-radius: 8px; }
+        .room-item { padding: 10px; background: #333; margin: 5px 0; cursor: pointer; border-radius: 4px; }
+        .room-item:hover { background: #444; }
+        textarea { width: 100%; height: 80px; margin-top: 10px; background: #111; color: #0f0; border: 1px solid #555; }
+        input { width: 90%; padding: 5px; margin-top: 5px; }
     </style>
 </head>
 <body>
-    <h1>MAZE WORLD MULTIPLAYER</h1>
-    <div class="stats">KEYS: <span id="keys">None</span> | STATUS: <span id="status">Connecting...</span></div>
+    <h1>GLOBAL MAZE SERVER</h1>
     
-    <canvas id="gameCanvas"></canvas>
+    <div class="container">
+        <div class="menu">
+            <h3>Active Mazes</h3>
+            <div id="roomList">No active mazes...</div>
+            <hr>
+            <h3>Host New Maze</h3>
+            <input type="text" id="roomName" placeholder="Maze Name">
+            <textarea id="mazeInput" placeholder="Paste Python Code Here"></textarea>
+            <button onclick="hostMaze()">Host Server</button>
+        </div>
 
-    <div class="controls">
-        <label>PASTE YOUR PYTHON CODE HERE:</label>
-        <textarea id="mazeInput" placeholder='{"0_0": {"type": "wall", ...}}'></textarea>
-        <button onclick="loadNewMaze()">LOAD & SYNC MAZE</button>
+        <div class="game-area">
+            <div>KEYS: <span id="keys">0</span> | ROOM: <span id="curRoom">None</span></div>
+            <canvas id="gameCanvas"></canvas>
+        </div>
     </div>
 
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
