--- a/index.html
+++ b/index.html
@@ -2,38 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Maze Server List</title>
+    <title>Maze World Multiplayer</title>
     <style>
-        body { background: #121212; color: #eee; font-family: sans-serif; display: flex; flex-direction: column; align-items: center; }
-        .container { display: flex; gap: 20px; margin-top: 20px; }
-        canvas { border: 2px solid #444; background: #000; }
-        .menu { width: 250px; background: #1e1e1e; padding: 15px; border-radius: 8px; }
-        .room-item { padding: 10px; background: #333; margin: 5px 0; cursor: pointer; border-radius: 4px; }
-        .room-item:hover { background: #444; }
-        textarea { width: 100%; height: 80px; margin-top: 10px; background: #111; color: #0f0; border: 1px solid #555; }
-        input { width: 90%; padding: 5px; margin-top: 5px; }
+        body { background: #121212; color: #eee; font-family: 'Segoe UI', sans-serif; display: flex; flex-direction: column; align-items: center; margin: 0; padding: 20px; }
+        .main-layout { display: flex; gap: 20px; width: 95%; max-width: 1200px; }
+        .sidebar { width: 300px; background: #1e1e1e; padding: 20px; border-radius: 12px; height: fit-content; border: 1px solid #333; }
+        canvas { border: 2px solid #007acc; background: #000; border-radius: 8px; box-shadow: 0 0 20px rgba(0,0,0,0.5); }
+        .room-item { padding: 12px; background: #2a2a2a; margin: 8px 0; cursor: pointer; border-radius: 6px; border-left: 4px solid #007acc; transition: 0.2s; }
+        .room-item:hover { background: #333; transform: translateX(5px); }
+        textarea { width: 100%; height: 100px; margin: 10px 0; background: #111; color: #0f0; border: 1px solid #444; font-family: monospace; font-size: 10px; }
+        input, select, button { width: 100%; padding: 10px; margin-bottom: 10px; border-radius: 4px; border: 1px solid #444; background: #2a2a2a; color: white; box-sizing: border-box; }
+        button { background: #007acc; border: none; cursor: pointer; font-weight: bold; }
+        button:hover { background: #005f99; }
+        .game-header { margin-bottom: 10px; font-weight: bold; }
     </style>
 </head>
 <body>
-    <h1>GLOBAL MAZE SERVER</h1>
-    
-    <div class="container">
-        <div class="menu">
-            <h3>Active Mazes</h3>
-            <div id="roomList">No active mazes...</div>
-            <hr>
-            <h3>Host New Maze</h3>
-            <input type="text" id="roomName" placeholder="Maze Name">
-            <textarea id="mazeInput" placeholder="Paste Python Code Here"></textarea>
-            <button onclick="hostMaze()">Host Server</button>
+    <div class="main-layout">
+        <div class="sidebar">
+            <h3>🌍 Server List</h3>
+            <div id="roomList">Looking for mazes...</div>
+            <hr style="border:0; border-top:1px solid #333; margin:20px 0;">
+            <h3>🛠️ Host Maze</h3>
+            <input type="text" id="roomName" placeholder="Room Name">
+            <textarea id="mazeInput" placeholder="Paste Python Export Here"></textarea>
+            <label>Your Skin Color:</label>
+            <input type="color" id="playerColor" value="#00ffcc">
+            <button onclick="hostMaze()">CREATE SERVER</button>
         </div>
 
-        <div class="game-area">
-            <div>KEYS: <span id="keys">0</span> | ROOM: <span id="curRoom">None</span></div>
+        <div class="game-display">
+            <div class="game-header">ROOM: <span id="curRoom" style="color:#007acc">None</span> | KEYS: <span id="keys" style="color:#f1c40f">0</span></div>
             <canvas id="gameCanvas"></canvas>
         </div>
     </div>
-
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <script src="game.js"></script>
 </body>
