--- a/index.html
+++ b/index.html
@@ -2,37 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Maze World Multiplayer</title>
+    <title>Maze World Pro</title>
     <style>
-        body { background: #121212; color: #eee; font-family: 'Segoe UI', sans-serif; display: flex; flex-direction: column; align-items: center; margin: 0; padding: 20px; }
-        .main-layout { display: flex; gap: 20px; width: 95%; max-width: 1200px; }
-        .sidebar { width: 300px; background: #1e1e1e; padding: 20px; border-radius: 12px; height: fit-content; border: 1px solid #333; }
-        canvas { border: 2px solid #007acc; background: #000; border-radius: 8px; box-shadow: 0 0 20px rgba(0,0,0,0.5); }
-        .room-item { padding: 12px; background: #2a2a2a; margin: 8px 0; cursor: pointer; border-radius: 6px; border-left: 4px solid #007acc; transition: 0.2s; }
-        .room-item:hover { background: #333; transform: translateX(5px); }
-        textarea { width: 100%; height: 100px; margin: 10px 0; background: #111; color: #0f0; border: 1px solid #444; font-family: monospace; font-size: 10px; }
-        input, select, button { width: 100%; padding: 10px; margin-bottom: 10px; border-radius: 4px; border: 1px solid #444; background: #2a2a2a; color: white; box-sizing: border-box; }
-        button { background: #007acc; border: none; cursor: pointer; font-weight: bold; }
-        button:hover { background: #005f99; }
-        .game-header { margin-bottom: 10px; font-weight: bold; }
+        body { background: #121212; color: #eee; font-family: sans-serif; display: flex; flex-direction: column; align-items: center; margin: 0; overflow: hidden; }
+        .main-layout { display: flex; width: 100vw; height: 100vh; }
+        .sidebar { width: 300px; background: #1e1e1e; padding: 20px; border-right: 1px solid #333; display: flex; flex-direction: column; }
+        .game-container { flex-grow: 1; position: relative; display: flex; flex-direction: column; align-items: center; justify-content: center; background: #000; }
+        canvas { border: 2px solid #444; box-shadow: 0 0 20px rgba(0,0,0,0.8); }
+        #chat-area { flex-grow: 1; background: #111; margin-top: 10px; border-radius: 5px; padding: 10px; overflow-y: auto; font-size: 13px; border: 1px solid #333; }
+        .msg { margin-bottom: 5px; }
+        .msg b { color: #007acc; }
+        input, button { padding: 10px; margin-top: 5px; border-radius: 4px; border: 1px solid #444; background: #2a2a2a; color: white; }
+        button { background: #007acc; cursor: pointer; border: none; font-weight: bold; }
+        .room-item { padding: 10px; background: #2a2a2a; margin: 5px 0; cursor: pointer; border-radius: 4px; }
+        .room-item:hover { background: #333; }
     </style>
 </head>
 <body>
     <div class="main-layout">
         <div class="sidebar">
-            <h3>🌍 Server List</h3>
-            <div id="roomList">Looking for mazes...</div>
-            <hr style="border:0; border-top:1px solid #333; margin:20px 0;">
-            <h3>🛠️ Host Maze</h3>
-            <input type="text" id="roomName" placeholder="Room Name">
-            <textarea id="mazeInput" placeholder="Paste Python Export Here"></textarea>
-            <label>Your Skin Color:</label>
+            <h3>👤 PLAYER</h3>
+            <input type="text" id="username" placeholder="Username" value="Player1">
             <input type="color" id="playerColor" value="#00ffcc">
-            <button onclick="hostMaze()">CREATE SERVER</button>
+            <hr style="width:100%; border:0; border-top:1px solid #333">
+            <h3>🌍 SERVERS</h3>
+            <div id="roomList"></div>
+            <input type="text" id="roomName" placeholder="New Maze Name">
+            <textarea id="mazeInput" style="height:50px; background:#111; color:#0f0;" placeholder="Paste Python Code"></textarea>
+            <button onclick="hostMaze()">HOST & JOIN</button>
+            <hr style="width:100%; border:0; border-top:1px solid #333">
+            <h3>💬 CHAT</h3>
+            <div id="chat-area"></div>
+            <input type="text" id="chatInput" placeholder="Press Enter to send...">
         </div>
-
-        <div class="game-display">
-            <div class="game-header">ROOM: <span id="curRoom" style="color:#007acc">None</span> | KEYS: <span id="keys" style="color:#f1c40f">0</span></div>
+        <div class="game-container">
+            <div style="margin-bottom:10px">ROOM: <span id="curRoom" style="color:#007acc">None</span></div>
             <canvas id="gameCanvas"></canvas>
         </div>
     </div>
