--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Maze World Pro</title>
+    <title>maze</title>
     <style>
         body { background: #121212; color: #eee; font-family: sans-serif; display: flex; flex-direction: column; align-items: center; margin: 0; overflow: hidden; }
         .main-layout { display: flex; width: 100vw; height: 100vh; }
